--- a/public/index.html
+++ b/public/index.html
@@ -265,6 +265,28 @@
         });
       });
     });
+
+     document.addEventListener("DOMContentLoaded", function () {
+      const togglePassword = document.getElementById("togglePassword");
+      const passwordInput = document.getElementById("registerPassword");
+
+      if (togglePassword && passwordInput) {
+        togglePassword.addEventListener("click", function () {
+          const isPassword = passwordInput.type === "password";
+          passwordInput.type = isPassword ? "text" : "password";
+
+          // Cambiar icono
+          const icon = this.querySelector("i");
+          if (isPassword) {
+            icon.classList.remove("bi-eye-slash");
+            icon.classList.add("bi-eye");
+          } else {
+            icon.classList.remove("bi-eye");
+            icon.classList.add("bi-eye-slash");
+          }
+        });
+      }
+    });
   </script>
 
   <script>
