llamen a dios XD

--- a/public/noticias.html
+++ b/public/noticias.html
@@ -16,7 +16,7 @@
   <div class="search-results-title" style="margin-bottom: 30px;">Últimas noticias de música</div>
   <div class="container-noticias"></div>
 
-  <script src="noticias.js"></script>
+  <script src="/js/noticias.js"></script>
   <script>
     if (window.mainNoticias) window.mainNoticias();
   </script>
