--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
 
             <!-- Olvidó contraseña -->
             <div style="text-align: right; margin-bottom: 24px;">
-              <a href="#" data-bs-toggle="modal" data-bs-target="#resetModal" data-bs-dismiss="modal" style="color: #5a189a; text-decoration: none; font-weight: 500; font-size: 0.9rem; transition: color 0.3s;" onmouseover="this.style.color='#ba01ff'" onmouseout="this.style.color='#5a189a'">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#resetModal" data-bs-dismiss="modal" style="color: #5a189a; text-decoration: none; font-weight: 500;">
                 ¿Olvidaste tu contraseña?
               </a>
             </div>
