--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
             <div class="input-group-animated" style="margin-bottom: 26px; position: relative;">
               <input type="text" required class="input-animated" id="resetName" style="width: 100%; padding: 14px 16px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; background: white; color: #333;">
               <label class="label-animated" for="resetName" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%);color: #999; font-size: 1rem; transition: all 0.3s;">
-                Nombre de usuario
+                Nombre
               </label>
               <i class="bi bi-person-fill"  style="position: absolute; left: 14px; top: 50%;transform: translateY(-50%); color: #ba01ff; font-size: 1.1rem;"></i>
               <span class="input-border"
@@ -244,17 +244,6 @@
                   Nombre completo
                 </label>
                 <i class="bi bi-person-fill" style="position: absolute; left: 14px; top: 50%; transform: translateY(-50%); color: #ba01ff; font-size: 1.1rem;"></i>
-                <span class="input-border" style="position: absolute; bottom: 0; left: 0; width: 0%; height: 2px; background: linear-gradient(160deg, #ba01ff, #00dffc); transition: width 0.3s;"></span>
-              </div>
-
-              <!-- Edad -->
-              <div class="input-group-animated" style="margin-bottom: 26px; position: relative;">
-                <input type="number" min="1" max="120" required class="input-animated" id="registerAge"
-                  style="width: 100%; padding: 14px 16px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
-                <label class="label-animated" for="registerAge" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
-                  Edad
-                </label>
-                <i class="bi bi-calendar-fill" style="position: absolute; left: 14px; top: 50%; transform: translateY(-50%); color: #ba01ff; font-size: 1.1rem;"></i>
                 <span class="input-border" style="position: absolute; bottom: 0; left: 0; width: 0%; height: 2px; background: linear-gradient(160deg, #ba01ff, #00dffc); transition: width 0.3s;"></span>
               </div>
 
