--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
             <p style="color: #5a189a; font-size: 1.1rem; margin-top: 8px; font-weight: 600;">Inicia sesión para continuar</p>
           </div>
 
-          <form method="post" id="loginForm">
+          <form method="post" action="/login" id="loginForm">
             <!-- Usuario -->
             <div class="input-group-animated" style="margin-bottom: 30px; position: relative;">
               <input type="text" required class="input-animated" id="loginUser"
@@ -235,7 +235,7 @@
               <p style="color: #5a189a; font-size: 1.1rem; margin-top: 8px; font-weight: 600;">Crea tu cuenta</p>
             </div>
 
-            <form method="post" id="registroForm">
+            <form method="post" action="/register" id="registroForm">
               <!-- Nombre -->
               <div class="input-group-animated" style="margin-bottom: 26px; position: relative;">
                 <input type="text" required class="input-animated" id="registerName"
