--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
             <form method="post" action="/register" id="registroForm">
               <!-- Nombre -->
               <div class="input-group-animated" style="margin-bottom: 26px; position: relative;">
-                <input type="text" required class="input-animated" id="registerName"
+                <input type="text" required class="input-animated" id="registerName" name="usuario"
                   style="width: 100%; padding: 14px 16px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
                 <label class="label-animated" for="registerName" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
                   Nombre completo
@@ -249,7 +249,7 @@
 
               <!-- Correo -->
               <div class="input-group-animated" style="margin-bottom: 26px; position: relative;">
-                <input type="email" required class="input-animated" id="registerEmail"
+                <input type="email" required class="input-animated" id="registerEmail" name="correo"
                   style="width: 100%; padding: 14px 16px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
                 <label class="label-animated" for="registerEmail" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
                   Correo electrónico
@@ -260,7 +260,7 @@
 
               <!-- Contraseña -->
               <div class="input-group-animated" style="margin-bottom: 30px; position: relative;">
-                <input type="password" required class="input-animated" id="registerPassword"
+                <input type="password" required class="input-animated" id="registerPassword" name="contrasena"
                   style="width: 100%; padding: 14px 45px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
                 <label class="label-animated" for="registerPassword" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
                   Contraseña
