--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
           <form method="post" action="/login" id="loginForm">
             <!-- Usuario -->
             <div class="input-group-animated" style="margin-bottom: 30px; position: relative;">
-              <input type="text" required class="input-animated" id="loginUser"
+              <input type="text" required class="input-animated" id="loginUser" name="usuario"
                 style="width: 100%; padding: 14px 16px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
               <label class="label-animated" for="loginUser" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
                 Usuario
@@ -104,7 +104,7 @@
 
             <!-- Contraseña -->
             <div class="input-group-animated" style="margin-bottom: 30px; position: relative;">
-              <input type="password" required class="input-animated" id="loginPassword"
+              <input type="password" required class="input-animated" id="loginPassword" name="contrasena"
                 style="width: 100%; padding: 14px 45px 14px 40px; border: 2px solid #ba01ff; border-radius: 12px; font-size: 1rem; transition: all 0.3s; background: white; color: #333; outline: none;">
               <label class="label-animated" for="loginPassword" style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); color: #999; font-size: 1rem; pointer-events: none; transition: all 0.3s; padding: 0 4px;">
                 Contraseña
@@ -297,6 +297,8 @@
       </div>
     </div>
   </div>
+
+  <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -520,5 +522,6 @@
     });
   });
 </script>
+<script src="js/main.js"></script> 
 </body>
 </html>
