--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
       <!--Boton para nodo oscuro :)-->
       <button class="btn rounded-fill" type="button" onclick="cambiarTema()"><i class="bi bi-moon-stars" id="dl-icon"></i></button>
       <script src="/js/temas.js"></script>
+
+      <button class="btn-publicar nav-link load-page" href="publicacion.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Crear Publicación">
+        <i class="bi bi-plus-lg"></i>
+      </button>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
