mejora en la parte de publicaciónes

--- a/public/bienvenido.html
+++ b/public/bienvenido.html
@@ -14,24 +14,14 @@
 </head>
 <body>
 
-
   <div style="text-align: center;">
-    <img src="images/iconogray.png" alt="Icono" class="icon">
-  
 
-  <p class="title"> ¿Qué haz escuchado? </p><br>
+    <p class="title"> Últimas Publicaciones </p><br>
 
-  <button type="button" class="btn btn-primary btn-lg"> Agregar cancion a escuchados</button>
-
-
-  <p class="normaltext"> Acá va a estar como el incio, el fyp, como en twitter, que le salgan las ultimas reseñas de la gente que siga o que le interese
-    y todo eso (nose si al final podamos hacer eso) </p>
-
-
-
+    <section id="feedPublicaciones" class="feed-publicaciones"></section>
 
   </div>
-  
 
+<script src="./js/feed-publicaciones.js"></script>
 </body>
 </html>
