--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                 <span class="dropdown-item-text fw-bold" id="perfil-nombre"></span>
               </li>
               <li><a class="dropdown-item load-page" href="perfil.html">Ver Perfil</a></li>
-              <li><a class="dropdown-item load-page" href="#">Configuración</a></li>
+              <li><a class="dropdown-item load-page" href="#">Panel Admin</a></li>
               <li><hr class="dropdown-divider load-page"></li>
               <li><a class="dropdown-item text-danger load-page" href="#" id="btn-logout">Cerrar Sesión</a></li>
             </ul>
