implementacion de gemini como moderador

--- a/public/publicacion.html
+++ b/public/publicacion.html
@@ -11,6 +11,11 @@
   <main class="container py-5 content fade-in">
     <h2 class="text-center mb-4 fw-bold">Crear nueva publicación</h2>
 
+    <div id="mensajeError" class="alert alert-danger d-none" role="alert">
+      
+    </div>
+
+
     <form id="formPublicacion" class="publicacion-card p-4 rounded shadow">
       <div class="mb-3">
         <label for="textoPublicacion" class="form-label fw-semibold">¿Qué quieres compartir?</label>
