--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 
 <!-- Modal de Login Mejorado -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content border-0" style="background: linear-gradient(135deg, #f3e8ff 0%, #e0f7ff 100%); border-radius: 24px; overflow: hidden; box-shadow: 0 20px 60px rgba(90,24,154,0.3);">
       <div class="modal-body p-0">
         <div style="padding: 48px 40px;">
@@ -160,7 +160,7 @@
 
 <!-- Modal de Restablecer Contraseña -->
 <div class="modal fade" id="resetModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
+<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content border-0" style="background: linear-gradient(135deg, #f3e8ff 0%, #e0f7ff 100%); border-radius: 24px; overflow: hidden; box-shadow: 0 20px 60px rgba(90,24,154,0.3);">
       <div class="modal-body p-0">
         <div style="padding: 48px 40px;">
@@ -232,7 +232,7 @@
 
   <!-- Modal de Registro Mejorado -->
   <div class="modal fade" id="registroModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content border-0" style="background: linear-gradient(135deg, #f3e8ff 0%, #e0f7ff 100%); border-radius: 24px; overflow: hidden; box-shadow: 0 20px 60px rgba(90,24,154,0.3);">
         <div class="modal-body p-0">
           <div style="padding: 48px 40px;">
