panel admin listo 58

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,11 @@
                 <span class="dropdown-item-text fw-bold" id="perfil-nombre"></span>
               </li>
               <li><a class="dropdown-item load-page" href="perfil.html">Ver Perfil</a></li>
-              <li><a class="dropdown-item load-page" href="#">Panel Admin</a></li>
+              <li id="panel-admin-link" style="display: none;">
+                <a class="dropdown-item load-page" href="panel-admin.html">
+                  <i class="bi bi-shield-lock-fill"></i> Panel Admin
+                </a>
+              </li>
               <li><hr class="dropdown-divider load-page"></li>
               <li><a class="dropdown-item text-danger load-page" href="#" id="btn-logout">Cerrar Sesión</a></li>
             </ul>
