--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,11 @@
                 <i class="bi bi-newspaper"></i>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link load-page" href="para-ti.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Para Ti">
+                <i class="bi bi-person"></i>
+              </a>
+            </li>
 
           <li class="nav-item d-flex align-items-center">
             <input type="text" class="search-input" id="searchInput" placeholder="Buscar...">
