--- a/public/index.html
+++ b/public/index.html
@@ -316,5 +316,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script> 
+  <script src="js/mobile-menu-fix.js"></script>
 </body>
 </html>
