--- a/public/noticias.html
+++ b/public/noticias.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="search-results-title" style="margin-bottom: 30px;">Últimas noticias de música</div>
+  <div class="search-results-title text-center" style="margin-bottom: 30px;">Últimas noticias de música</div>
   <div class="container-noticias"></div>
 
   <script src="/js/noticias.js"></script>
