--- a/public/perfil-usuario.html
+++ b/public/perfil-usuario.html
@@ -167,7 +167,7 @@ const urlParams = new URLSearchParams(window.location.search);
 idUsuario = urlParams.get('id');
 }
 
-console.log('ID Usuario cargado:', idUsuario);
+//console.log('ID Usuario cargado:', idUsuario);
 
 if (!idUsuario) {
 window.mostrarToast('Usuario no especificado', 'error');
