--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="modal-3d.css">
+  <link rel="stylesheet" href="navbar-glass.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <script src="js/utils.js"></script>
 </head>
@@ -19,10 +21,6 @@
       <!--Boton para nodo oscuro :)-->
       <button class="btn rounded-fill" type="button" onclick="cambiarTema()"><i class="bi bi-moon-stars" id="dl-icon"></i></button>
       <script src="/js/temas.js"></script>
-
-      <button class="btn-publicar nav-link load-page" href="publicacion.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Crear Publicación">
-        <i class="bi bi-plus-lg"></i>
-      </button>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -83,6 +81,10 @@
       </div>
     </div>
   </nav>
+
+  <button class="btn-publicar nav-link load-page" href="publicacion.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Crear Publicación">
+    <i class="bi bi-plus-lg"></i>
+  </button>
 
   <div id="content" class="content container">
     <div id="main-content"></div>
@@ -317,5 +319,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script> 
   <script src="js/mobile-menu-fix.js"></script>
+  <script src="js/modal-3d.js"></script>
+  <script src="js/navbar-scroll.js"></script>
+  <script src="js/cursor-music.js"></script>
 </body>
 </html>
