--- a/public/buscador.html
+++ b/public/buscador.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Resultados de búsqueda - AttoMusic</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <button id="backToTopBtn" title="Volver arriba" style="display:none;position:fixed;bottom:32px;right:32px;z-index:9999;background:linear-gradient(160deg,#ba01ff,#00dffc);color:white;border:none;border-radius:50%;width:52px;height:52px;box-shadow:0 2px 12px #0002;font-size:2rem;cursor:pointer;transition:opacity 0.3s;">
