--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
   <!--recursos boostrap para modo oscuro-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="modal-3d.css">
-  <link rel="stylesheet" href="navbar-glass.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/modal-3d.css">
+  <link rel="stylesheet" href="css/navbar-glass.css">
+  <link rel="stylesheet" href="css/toast-musical.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <script src="js/utils.js"></script>
 </head>
@@ -322,5 +323,6 @@
   <script src="js/modal-3d.js"></script>
   <script src="js/navbar-scroll.js"></script>
   <script src="js/cursor-music.js"></script>
+  <script src="js/toast-musical.js"></script>
 </body>
 </html>
