--- a/public/perfil-usuario.html
+++ b/public/perfil-usuario.html
@@ -6,7 +6,7 @@
 <title>Perfil de Usuario - AttoMusic</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <style>
   .perfil-header {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
