--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AttoMusic</title>
-  <!--recursos boostrap para modo oscuro-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/modal-3d.css">
   <link rel="stylesheet" href="css/navbar-glass.css">
   <link rel="stylesheet" href="css/toast-musical.css">
+  <link rel="stylesheet" href="css/cursor-toggle.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <script src="js/utils.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
 
-  <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="images/iconowhite.png"> AttoMusic </a>
+      <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="images/iconowhite.png"> AttoMusic </a>
       <!--Boton para nodo oscuro :)-->
-      <button class="btn rounded-fill" type="button" onclick="cambiarTema()"><i class="bi bi-moon-stars" id="dl-icon"></i></button>
-      <script src="/js/temas.js"></script>
+      <button class="btn rounded-fill" type="button" onclick="cambiarTema()">
+        <i class="bi bi-moon-stars" id="dl-icon"></i>
+      </button>
+
+      <button class="btn rounded-fill" type="button" id="btn-cursor-music" onclick="toggleCursorMusic()" title="Desactivar cursor musical">
+        <i class="bi bi-music-note-beamed" id="dl-icon"></i>
+      </button>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -324,5 +328,7 @@
   <script src="js/navbar-scroll.js"></script>
   <script src="js/cursor-music.js"></script>
   <script src="js/toast-musical.js"></script>
+  <script src="/js/temas.js"></script>
+  <script src="js/utils.js"></script>
 </body>
 </html>
